--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "devDependencies": {
     "bower": "~1.2.7",
     "grunt": "~0.4.1",
+    "grunt-contrib-connect": "~0.6.0",
     "grunt-contrib-jshint": "~0.7.0",
     "grunt-contrib-qunit": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-saucelabs": "~4.1.0"
   },
   "scripts": {
     "install": "bower install",
