--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "test/"
   ],
   "dependencies": {
-    "jquery": "~2.0",
+    "jquery": ">=1.8",
     "selector-set": "~1.0"
   },
   "devDependencies": {
