--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "jquery-selector-set",
-  "repository" : {
+  "repository": {
     "type": "git",
     "url": "http://github.com/josh/jquery-selector-set.git"
   },
   "devDependencies": {
-    "bower": "~1.2.7",
-    "grunt": "~0.4.1",
-    "grunt-contrib-connect": "~0.6.0",
-    "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-qunit": "~0.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-saucelabs": "~4.1.0"
+    "bower": "1.3.12",
+    "grunt": "0.4.5",
+    "grunt-contrib-connect": "0.9.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-qunit": "0.5.2",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-saucelabs": "8.4.1"
   },
   "scripts": {
     "install": "bower install",
