--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ before_script: npm install -g grunt-cli
 script: grunt travis
 env:
   global:
-  - secure: DFEegpQCXW/C++jXOB21RuLdSoImlUUbBTKhg2KBTDpak1LUG0Wz/BBtsbL4iejFQHE9rQ6aE5WeyCE6a9w2cUxsGH06J/WjLjGD2gxv0bc9nhA+96f6TcCgwHdq0zXFNIuLuOQhX3IUPfEXqDhcD5Yh4d7jXwkI7NdWb5a0yT4=
-  - secure: d/WifXTEh+VHtvM6xfViXTTizik2Wr88z/Jxj7uQOttMPDKqeN07CEBNzAcCl8xNJda9pjwOpV/374bSQcGd++nYExxx51TXWa+HjMbTWcNrSsiq5mHgzKYrVMBV3gHLEKX46OdTfcjgdRwOlDMFkmDd/mFhdb7IjVliN4D0b/A=
+  - SAUCE_USERNAME=josh-jq-selector-set
+  - SAUCE_ACCESS_KEY=51ba8f3c-97f2-4bf9-af67-5487349f49f3
