--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "jquery-selector-set",
+  "version": "0.1.8",
+  "description": "Speeds up jQuery event delegation by using SelectorSet for matching event targets.",
   "repository": {
     "type": "git",
     "url": "http://github.com/josh/jquery-selector-set.git"
   },
-  "devDependencies": {
+  "main": "jquery.selector-set.js",
+  "jsnext:main": "jquery.selector-set.next.js",
+  "dependencies": {
+    "jquery": "*",
+    "selector-set": "~1.1.0"
+  }, "devDependencies": {
     "bower": "1.3.12",
     "grunt": "0.4.5",
     "grunt-contrib-connect": "0.9.0",
@@ -16,5 +23,9 @@
   "scripts": {
     "install": "bower install",
     "test": "grunt test"
-  }
+  },
+  "files": [
+    "jquery.selector-set.js",
+    "jquery.selector-set.next.js"
+  ]
 }
