--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "jquery": "*",
     "selector-set": "~1.1.0"
-  }, "devDependencies": {
+  },
+  "devDependencies": {
     "bower": "1.3.12",
     "grunt": "0.4.5",
     "grunt-contrib-connect": "0.9.0",
